# zero2prod

./: .env  .envrc  Cargo.toml  main
.github/workflows/: general.yml
migrations/: 20251229230955_create_subscriptions_table.sql
scripts/: curls.sh  init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
