[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.15"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = {version = "0.1.44", features = ["log"]}
uuid = { version = "1.19.0", features = ["v4"] }
[dependencies.sqlx]
version = "0.8"
# default-features = false
features = [
# "runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"runtime-tokio",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
